@@ -136,7 +136,7 @@
             </p>
             
             <!-- ###################################### -->
-            <h3>Changes in version CAT12.9 (2535)</h3>
+            <h3>Changes in version CAT12.9 (2550)</h3>
 
             <details>
               <summary><u>Changes in preprocessing pipeline (which affects your results compared to CAT12.8.2)</u></summary>
